# ncfw

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
ncfw/include/ncfw/: App.hpp  AppModule.hpp  Exception.hpp  Logger.hpp  ncfw.hpp
ncfw/include/ncfw/ActorSystem/: Actor.hpp  ActorFactory.hpp  ActorId.hpp
ncfw/include/ncfw/Algebra/: Angle.hpp  Matrix.hpp  MatrixFactory.hpp  Vector.hpp
ncfw/include/ncfw/EventSystem/: Event.hpp  EventListener.hpp  EventListenerCallbackHandle.hpp  EventManager.hpp  UniversalEventListener.hpp  UniversalEventListenerCallbackHandle.hpp
ncfw/include/ncfw/ProcessSystem/: Process.hpp  ProcessManager.hpp
ncfw/include/ncfw/PropertySystem/: Property.hpp  PropertyContainer.hpp  PropertyProxy.hpp
ncfw/include/ncfw/ResCache/: FileSystemSource.hpp  ResCache.hpp  Resource.hpp  ResourceSource.hpp
ncfw/src/: Actor.cpp  ActorFactory.cpp  App.cpp  EventManager.cpp  FileSystemSource.cpp  Logger.cpp  ProcessManager.cpp  Property.cpp  PropertyContainer.cpp  PropertyProxy.cpp  ResCache.cpp  Resource.cpp
ncfw/src/ncfw/: ncfw.hpp
ncfw_sandbox/: main.cpp
